--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
     "type": "git",
     "url": "https://github.com/developerDemetri/NodeBootstrapSkeleton"
   },
-  "license": "Apache 2.0"
+  "license": "MIT"
 }
